--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,17 +8,18 @@
   padding: 0 0.5rem;
 }
 
-.sampleStyle {
+.icon {
   width: 30px;
   height: 30px;
   background: url('~/src/assets/images/icons.png') no-repeat;
 }
 
 .board {
+  /* position: absolute; */
   display: flex;
   flex-wrap: wrap;
-  width: 270px;
-  height: 270px;
+  width: 450px;
+  height: 450px;
   background-color: lightgray;
 }
 
@@ -26,7 +27,32 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   border: 1px solid gray;
+}
+
+.flontCell {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+
+  /* padding: 0;
+  margin: 0 /* top: 0; */
+
+  /* background-color: black; */
+}
+
+.frontboard {
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  width: 450px;
+  height: 450px;
+  border: solid;
+
+  /* background-color: lightgray; */
 }
