--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -10,6 +10,7 @@
 
 .icon {
   display: flex;
+  align-items: center;
   width: 30px;
   height: 30px;
   background: url('~/src/assets/images/icons.png') no-repeat;
