--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,6 +21,7 @@
   flex-wrap: wrap;
   width: 315px;
   height: 315px;
+  margin-top: 30px;
   background-color: lightgray;
 }
 
@@ -45,4 +46,17 @@
   background-color: darkgray;
   border: 4px solid;
   border-color: white gray gray white;
+}
+
+.backboard {
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  width: 370px;
+  height: 430px;
+  background-color: darkgray;
+  border: 10px solid gray;
+  border-color: rgb(240 240 240) gray gray rgb(240 240 240);
 }
