--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -78,6 +78,7 @@
   justify-content: center;
   width: 80px;
   height: 45px;
+  margin: auto;
   font-size: 30px;
   color: red;
   background-color: black;
