--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -22,7 +22,7 @@
   width: 315px;
   height: 315px;
   margin-top: 15px;
-  background-color: lightgra;
+  background-color: lightgray;
 
   /* border: 1px solid;
   border-color: white gray gray white; */
